[metadata]
name = timeranges
version = attr: timeranges.__version__
author = Micael Jarniac
author_email = micael@jarniac.dev
description = Time ranges.
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MicaelJarniac/timeranges
project_urls =
    Bug Tracker = https://github.com/MicaelJarniac/timeranges/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
zip_safe = no
install_requires =
    attrs >= 21.2.0

[options.package_data]
timeranges = py.typed

[flake8]
max-line-length = 88
max-complexity = 18
ignore = E203, E266, E501, W503, F403, F401

[isort]
profile = black

[pydocstyle]
convention = google

[semantic_release]
changelog_capitalize = false
version_variable = timeranges/__init__.py:__version__
build_command = python setup.py sdist
branch = main

[coverage:run]
omit = venv/*, tests/*
command_line = -m pytest

[tool:pytest]
# addopts = --cov
